feat: adding meta tags and parallax scrolling effect

--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/skull-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
     <title>Conner McKenna</title>
+    <meta name="title" content="Conner McKenna" />
+    <meta name="description" content="Portfolio Website" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://connermckenna.ca" />
+    <meta property="og:title" content="Conner McKenna" />
+    <meta property="og:description" content="Portfolio Website" />
+    <meta property="og:image" content="/thumbnail.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://connermckenna.ca" />
+    <meta property="twitter:title" content="Conner McKenna" />
+    <meta property="twitter:description" content="Portfolio Website" />
+    <meta property="twitter:image" content="/thumbnail.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <div id="root"></div>
